--- a/src/main/resources/view/DriverAssignmentForm.fxml
+++ b/src/main/resources/view/DriverAssignmentForm.fxml
@@ -1,18 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-
+<?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="driverAssignmentPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="255.0" prefWidth="978.0" style="-fx-background-color: white; -fx-background-radius: 10;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TableView fx:id="tblDriverAssignment" layoutX="65.0" layoutY="20.0" prefHeight="216.0" prefWidth="570.0" stylesheets="@../asserts/TableStyle.css">
+      <TableView fx:id="tblDriverAssignment" layoutX="26.0" layoutY="13.0" prefHeight="223.0" prefWidth="443.0" stylesheets="@../asserts/TableStyle.css">
          <columns>
-            <TableColumn fx:id="colLicensePlateNo" prefWidth="160.0" text="License Plate No" />
-            <TableColumn fx:id="colDriverNic" prefWidth="207.0" text="Driver NIC" />
-            <TableColumn fx:id="colPricePerKm" prefWidth="201.0" text="Price Per km" />
+            <TableColumn fx:id="colLicensePlateNo" prefWidth="132.0" text="License Plate No" />
+            <TableColumn fx:id="colDriverNic" prefWidth="175.0" text="Driver NIC" />
+            <TableColumn fx:id="colPricePerKm" prefWidth="134.0" text="Price Per km" />
          </columns>
       </TableView>
+      <Button fx:id="btnReturn" layoutX="768.0" layoutY="202.0" mnemonicParsing="false" onAction="#btnReturnOnAction" prefHeight="40.0" prefWidth="179.0" style="-fx-background-color: #dfe6e9; -fx-border-radius: 10; -fx-border-color: #00b894;" text="RETURN" textFill="#00b894">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
+      <ImageView fitHeight="243.0" fitWidth="285.0" layoutX="478.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../asserts/DriverAssignment.jpg" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
