--- a/src/main/resources/view/DriverForm.fxml
+++ b/src/main/resources/view/DriverForm.fxml
@@ -91,10 +91,21 @@
                </font>
             </Label>
             <ComboBox fx:id="cmbAvailabilityStatus" layoutX="179.0" layoutY="151.0" prefHeight="35.0" prefWidth="398.0" promptText="Select" style="-fx-background-color: white; -fx-border-color: #dcdde1;" />
-            <Button fx:id="btnRefresh" layoutX="713.0" layoutY="80.0" mnemonicParsing="false" onAction="#btnRefreshOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-radius: 10; -fx-border-color: #ffc029;" text="      REFRESH" textFill="#ffc029">
+            <Button fx:id="btnRefresh" layoutX="713.0" layoutY="80.0" mnemonicParsing="false" onAction="#btnRefreshOnAction" prefHeight="35.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-radius: 10; -fx-border-color: #ffc029;" text="  REFRESH" textFill="#ffc029">
                <font>
                   <Font size="18.0" />
                </font>
+               <graphic>
+                  <FontAwesomeIcon fill="#ffc029" iconName="REFRESH" size="1.5em" />
+               </graphic>
+            </Button>
+            <Button fx:id="btnViewDriverAssignment" layoutX="644.0" layoutY="17.0" mnemonicParsing="false" onAction="#btnViewDriverAssignmentOnAction" prefHeight="41.0" prefWidth="316.0" style="-fx-background-color: #dfe6e9; -fx-border-radius: 10; -fx-border-color: #00b894;" text="  VIEW DRIVER ASSIGNMENT" textFill="#00b894">
+               <font>
+                  <Font size="18.0" />
+               </font>
+               <graphic>
+                  <FontAwesomeIcon fill="#00b894" iconName="EYE" size="1.5em" />
+               </graphic>
             </Button>
          </children>
       </AnchorPane>
@@ -104,12 +115,5 @@
          </font>
       </TextField>
       <FontAwesomeIcon fill="#c3bfbf" iconName="SEARCH" layoutX="266.0" layoutY="428.0" />
-      <Button fx:id="btnViewDriverAssignment" layoutX="682.0" layoutY="147.0" mnemonicParsing="false" onAction="#btnViewDriverAssignmentOnAction" prefHeight="40.0" prefWidth="297.0" style="-fx-background-color: #dfe6e9; -fx-border-radius: 10; -fx-border-color: #00b894;" text="      VIEW DRIVER ASSIGNMENT" textFill="#00b894">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Button>
-      <FontAwesomeIcon fill="#00b894" iconName="EYE" layoutX="692.0" layoutY="175.0" size="2em" />
-      <FontAwesomeIcon fill="#ffc029" iconName="REFRESH" layoutX="768.0" layoutY="238.0" size="2em" />
    </children>
 </AnchorPane>
