--- a/src/main/resources/view/RepairsForm.fxml
+++ b/src/main/resources/view/RepairsForm.fxml
@@ -22,7 +22,7 @@
             </Label>
          </children>
       </AnchorPane>
-      <TableView fx:id="tblRepairs" layoutX="32.0" layoutY="447.0" prefHeight="332.0" prefWidth="976.0" stylesheets="@../asserts/TableStyle.css">
+      <TableView fx:id="tblRepairs" layoutX="32.0" layoutY="447.0" onMouseClicked="#tblRepairsOnClicked" prefHeight="332.0" prefWidth="976.0" stylesheets="@../asserts/TableStyle.css">
         <columns>
           <TableColumn fx:id="colRepairID" prefWidth="117.0" text="Repair ID" />
           <TableColumn fx:id="colLicensePlateNo" prefWidth="140.0" text="License Plate No" />
@@ -61,7 +61,7 @@
             </Button>
             <FontAwesomeIcon fill="#ffc029" iconName="SAVE" layoutX="746.0" layoutY="236.0" size="2em" />
             <FontAwesomeIcon fill="#ffc029" iconName="REFRESH" layoutX="523.0" layoutY="236.0" size="2em" />
-            <Label fx:id="txtFldAvailabilityStatus" layoutX="14.0" layoutY="152.0" prefHeight="43.0" prefWidth="145.0" text="Date">
+            <Label layoutX="14.0" layoutY="152.0" prefHeight="43.0" prefWidth="145.0" text="Date">
                <font>
                   <Font size="14.0" />
                </font>
@@ -72,7 +72,7 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label fx:id="lblRepairID" layoutX="162.0" layoutY="6.0" prefHeight="43.0" prefWidth="145.0">
+            <Label fx:id="lblRepairID" layoutX="162.0" layoutY="6.0" prefHeight="43.0" prefWidth="145.0" text="1">
                <font>
                   <Font size="14.0" />
                </font>
