--- a/src/main/resources/view/DriverForm.fxml
+++ b/src/main/resources/view/DriverForm.fxml
@@ -24,11 +24,12 @@
       <TableView fx:id="tblDrivers" layoutX="35.0" layoutY="454.0" onMouseClicked="#tblDriversOnClicked" prefHeight="324.0" prefWidth="978.0" stylesheets="@../asserts/TableStyle.css">
          <columns>
             <TableColumn fx:id="colNic" prefWidth="163.0" text="NIC" />
-            <TableColumn fx:id="colName" prefWidth="191.0" text="Name" />
-            <TableColumn fx:id="colEmail" prefWidth="197.0" text="Email" />
-            <TableColumn fx:id="colAvailabilityStatus" minWidth="1.0" prefWidth="153.0" text="Availability Status" />
-            <TableColumn fx:id="colContactNumber" prefWidth="151.0" text="Contact Number" />
-            <TableColumn fx:id="colOption" prefWidth="124.0" text="Option" />
+            <TableColumn fx:id="colName" prefWidth="159.0" text="Name" />
+            <TableColumn fx:id="colEmail" prefWidth="166.0" text="Email" />
+            <TableColumn fx:id="colAvailabilityStatus" minWidth="1.0" prefWidth="106.0" text="Availability &#10;    Status" />
+            <TableColumn fx:id="colContactNumber" prefWidth="174.0" text="Contact &#10;Number" />
+            <TableColumn fx:id="colPricePerKm" prefWidth="86.0" text="Price Per &#10;    km" />
+            <TableColumn fx:id="colOption" prefWidth="122.0" text="Option" />
          </columns>
       </TableView>
       <AnchorPane fx:id="driverFormPane" layoutX="33.0" layoutY="129.0" prefHeight="255.0" prefWidth="978.0" style="-fx-background-color: white; -fx-background-radius: 10;">
@@ -63,35 +64,35 @@
                   <Font size="14.0" />
                </font>
             </TextField>
-            <TextField fx:id="txtFldContactNumber" layoutX="179.0" layoutY="201.0" prefHeight="35.0" prefWidth="398.0" promptText="0777777777">
+            <TextField fx:id="txtFldContactNumber" layoutX="179.0" layoutY="201.0" prefHeight="35.0" prefWidth="235.0" promptText="0777777777">
                <font>
                   <Font size="14.0" />
                </font>
             </TextField>
-            <TextField fx:id="txtFldNIC" layoutX="179.0" layoutY="8.0" prefHeight="35.0" prefWidth="398.0" promptText="000000000000">
+            <TextField fx:id="txtFldNIC" layoutX="179.0" layoutY="8.0" prefHeight="35.0" prefWidth="228.0" promptText="000000000000">
                <font>
                   <Font size="14.0" />
                </font>
             </TextField>
-            <Button fx:id="btnSave" layoutX="713.0" layoutY="197.0" mnemonicParsing="false" onAction="#btnSaveOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-color: #ffc029; -fx-border-radius: 10;" text="SAVE" textFill="#ffc029">
+            <Button fx:id="btnSave" layoutX="753.0" layoutY="197.0" mnemonicParsing="false" onAction="#btnSaveOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-color: #ffc029; -fx-border-radius: 10;" text="   SAVE" textFill="#ffc029">
                <font>
                   <Font size="18.0" />
                </font>
             </Button>
-            <Button fx:id="btnUpdate" layoutX="713.0" layoutY="134.0" mnemonicParsing="false" onAction="#btnUpdateOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-color: #ffc029; -fx-border-radius: 10;" text="    UPDATE" textFill="#ffc029">
+            <Button fx:id="btnUpdate" layoutX="753.0" layoutY="140.0" mnemonicParsing="false" onAction="#btnUpdateOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-color: #ffc029; -fx-border-radius: 10;" text="    UPDATE" textFill="#ffc029">
                <font>
                   <Font size="18.0" />
                </font>
             </Button>
-            <FontAwesomeIcon fill="#ffc029" iconName="SAVE" layoutX="734.0" layoutY="226.0" size="2em" />
-            <FontAwesomeIcon fill="#ffc029" iconName="WRENCH" layoutX="733.0" layoutY="163.0" size="2em" />
+            <FontAwesomeIcon fill="#ffc029" iconName="SAVE" layoutX="784.0" layoutY="226.0" size="2em" />
+            <FontAwesomeIcon fill="#ffc029" iconName="WRENCH" layoutX="779.0" layoutY="167.0" size="2em" />
             <Label layoutX="14.0" layoutY="149.0" prefHeight="43.0" prefWidth="145.0" text="Availability Status">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <ComboBox fx:id="cmbAvailabilityStatus" layoutX="179.0" layoutY="151.0" prefHeight="35.0" prefWidth="398.0" promptText="Select" style="-fx-background-color: white; -fx-border-color: #dcdde1;" />
-            <Button fx:id="btnRefresh" layoutX="713.0" layoutY="80.0" mnemonicParsing="false" onAction="#btnRefreshOnAction" prefHeight="35.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-radius: 10; -fx-border-color: #ffc029;" text="  REFRESH" textFill="#ffc029">
+            <ComboBox fx:id="cmbAvailabilityStatus" layoutX="179.0" layoutY="151.0" prefHeight="35.0" prefWidth="203.0" promptText="Select" style="-fx-background-color: white; -fx-border-color: #dcdde1;" />
+            <Button fx:id="btnRefresh" layoutX="753.0" layoutY="80.0" mnemonicParsing="false" onAction="#btnRefreshOnAction" prefHeight="35.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-radius: 10; -fx-border-color: #ffc029;" text="  REFRESH" textFill="#ffc029">
                <font>
                   <Font size="18.0" />
                </font>
@@ -99,7 +100,7 @@
                   <FontAwesomeIcon fill="#ffc029" iconName="REFRESH" size="1.5em" />
                </graphic>
             </Button>
-            <Button fx:id="btnViewDriverAssignment" layoutX="644.0" layoutY="17.0" mnemonicParsing="false" onAction="#btnViewDriverAssignmentOnAction" prefHeight="41.0" prefWidth="316.0" style="-fx-background-color: #dfe6e9; -fx-border-radius: 10; -fx-border-color: #00b894;" text="  VIEW DRIVER ASSIGNMENT" textFill="#00b894">
+            <Button fx:id="btnViewDriverAssignment" layoutX="647.0" layoutY="17.0" mnemonicParsing="false" onAction="#btnViewDriverAssignmentOnAction" prefHeight="41.0" prefWidth="316.0" style="-fx-background-color: #dfe6e9; -fx-border-radius: 10; -fx-border-color: #00b894;" text="  VIEW DRIVER ASSIGNMENT" textFill="#00b894">
                <font>
                   <Font size="18.0" />
                </font>
@@ -107,6 +108,16 @@
                   <FontAwesomeIcon fill="#00b894" iconName="EYE" size="1.5em" />
                </graphic>
             </Button>
+            <Label layoutX="456.0" layoutY="145.0" prefHeight="43.0" prefWidth="95.0" text="Price Per km">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <TextField fx:id="txtPricePerKm" layoutX="564.0" layoutY="151.0" prefHeight="35.0" prefWidth="130.0">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
          </children>
       </AnchorPane>
       <TextField fx:id="txtFldSearchHere" layoutX="252.0" layoutY="405.0" onKeyReleased="#txtFldSearchHereOnAction" prefHeight="35.0" prefWidth="500.0" promptText="       Search Here">
