--- a/src/main/resources/view/AdminDashboardMenuForm.fxml
+++ b/src/main/resources/view/AdminDashboardMenuForm.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1300.0" style="-fx-background-color: #dfe4ea;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.rdfcarrentals.controller.AdminDashboardMenuFormController">
+<AnchorPane fx:id="adminPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1300.0" style="-fx-background-color: #dfe4ea;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.rdfcarrentals.controller.AdminDashboardMenuFormController">
    <children>
       <AnchorPane fx:id="adminDashboardMenu" prefHeight="800.0" prefWidth="274.0" style="-fx-background-color: white;">
          <children>
@@ -18,88 +18,75 @@
                   <Font name="System Bold" size="20.0" />
                </font>
             </Label>
-            <VBox layoutY="123.0" prefHeight="651.0" prefWidth="274.0">
+            <VBox layoutY="123.0" prefHeight="644.0" prefWidth="274.0">
                <children>
-                  <Button fx:id="btnDashboard" alignment="BOTTOM_LEFT" mnemonicParsing="false" onAction="#btnDashboardOnAction" prefHeight="45.0" prefWidth="274.0" style="-fx-background-color: white;" text="               Dashboard" textFill="#636e72">
+                  <Button fx:id="btnDashboard" alignment="BOTTOM_LEFT" mnemonicParsing="false" onAction="#btnDashboardOnAction" prefHeight="50.0" prefWidth="274.0" style="-fx-background-color: white;" text="               Dashboard" textFill="#636e72">
                      <font>
-                        <Font size="17.0" />
+                        <Font size="20.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btnCars" alignment="BOTTOM_LEFT" mnemonicParsing="false" onAction="#btnCarsOnAction" prefHeight="45.0" prefWidth="276.0" style="-fx-background-color: white;" text="               Cars" textFill="#636e72">
+                  <Button fx:id="btnCars" alignment="BOTTOM_LEFT" mnemonicParsing="false" onAction="#btnCarsOnAction" prefHeight="50.0" prefWidth="276.0" style="-fx-background-color: white;" text="               Cars" textFill="#636e72">
                      <font>
-                        <Font size="17.0" />
+                        <Font size="20.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btnDrivers" alignment="BOTTOM_LEFT" mnemonicParsing="false" onAction="#btnDriversOnAction" prefHeight="45.0" prefWidth="278.0" style="-fx-background-color: white;" text="               Drivers" textFill="#636e72">
+                  <Button fx:id="btnDrivers" alignment="BOTTOM_LEFT" mnemonicParsing="false" onAction="#btnDriversOnAction" prefHeight="50.0" prefWidth="278.0" style="-fx-background-color: white;" text="               Drivers" textFill="#636e72">
                      <font>
-                        <Font size="17.0" />
+                        <Font size="20.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btnCustomers" alignment="BOTTOM_LEFT" mnemonicParsing="false" onAction="#btnCustomersOnAction" prefHeight="45.0" prefWidth="274.0" style="-fx-background-color: white;" text="               Customers" textFill="#636e72">
+                  <Button fx:id="btnCustomers" alignment="BOTTOM_LEFT" mnemonicParsing="false" onAction="#btnCustomersOnAction" prefHeight="50.0" prefWidth="274.0" style="-fx-background-color: white;" text="               Customers" textFill="#636e72">
                      <font>
-                        <Font size="17.0" />
+                        <Font size="20.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btnSales" alignment="BOTTOM_LEFT" mnemonicParsing="false" onAction="#btnSalesOnAction" prefHeight="45.0" prefWidth="275.0" style="-fx-background-color: white;" text="               Sales" textFill="#636e72">
+                  <Button fx:id="btnReservations" alignment="BOTTOM_LEFT" mnemonicParsing="false" onAction="#btnReservationsOnAction" prefHeight="50.0" prefWidth="276.0" style="-fx-background-color: white;" text="               Reservations" textFill="#636e72">
                      <font>
-                        <Font size="17.0" />
+                        <Font size="20.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btnBuys" alignment="BOTTOM_LEFT" mnemonicParsing="false" onAction="#btnBuysOnAction" prefHeight="45.0" prefWidth="275.0" style="-fx-background-color: white;" text="               Buys" textFill="#636e72">
+                  <Button fx:id="btnPayments" alignment="BOTTOM_LEFT" mnemonicParsing="false" onAction="#btnPaymentsOnAction" prefHeight="50.0" prefWidth="279.0" style="-fx-background-color: white;" text="               Payments" textFill="#636e72">
                      <font>
-                        <Font size="17.0" />
+                        <Font size="20.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btnReservations" alignment="BOTTOM_LEFT" mnemonicParsing="false" onAction="#btnReservationsOnAction" prefHeight="45.0" prefWidth="276.0" style="-fx-background-color: white;" text="               Reservations" textFill="#636e72">
+                  <Button fx:id="btnCredits" alignment="BOTTOM_LEFT" mnemonicParsing="false" onAction="#btnCreditsOnAction" prefHeight="50.0" prefWidth="279.0" style="-fx-background-color: white;" text="               Credits" textFill="#636e72">
                      <font>
-                        <Font size="17.0" />
+                        <Font size="20.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btnPayments" alignment="BOTTOM_LEFT" mnemonicParsing="false" onAction="#btnPaymentsOnAction" prefHeight="45.0" prefWidth="279.0" style="-fx-background-color: white;" text="               Payments" textFill="#636e72">
+                  <Button fx:id="btnRepairs" alignment="BOTTOM_LEFT" mnemonicParsing="false" onAction="#btnRepairsOnAction" prefHeight="50.0" prefWidth="276.0" style="-fx-background-color: white;" text="               Repairs" textFill="#636e72">
                      <font>
-                        <Font size="17.0" />
+                        <Font size="20.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btnCredits" alignment="BOTTOM_LEFT" mnemonicParsing="false" onAction="#btnCreditsOnAction" prefHeight="45.0" prefWidth="279.0" style="-fx-background-color: white;" text="               Credits" textFill="#636e72">
+                  <Button fx:id="btnCashiers" alignment="BOTTOM_LEFT" mnemonicParsing="false" onAction="#btnCashiersOnAction" prefHeight="50.0" prefWidth="281.0" style="-fx-background-color: white;" text="               Cashiers" textFill="#636e72">
                      <font>
-                        <Font size="17.0" />
+                        <Font size="20.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btnRepairs" alignment="BOTTOM_LEFT" mnemonicParsing="false" onAction="#btnRepairsOnAction" prefHeight="45.0" prefWidth="276.0" style="-fx-background-color: white;" text="               Repairs" textFill="#636e72">
+                  <Button fx:id="btnReports" alignment="BOTTOM_LEFT" mnemonicParsing="false" onAction="#btnReportsOnAction" prefHeight="50.0" prefWidth="277.0" style="-fx-background-color: white;" text="               Reports" textFill="#636e72">
                      <font>
-                        <Font size="17.0" />
+                        <Font size="20.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btnCashiers" alignment="BOTTOM_LEFT" mnemonicParsing="false" onAction="#btnCashiersOnAction" prefHeight="45.0" prefWidth="281.0" style="-fx-background-color: white;" text="               Cashiers" textFill="#636e72">
+                  <Button fx:id="btnLogout" alignment="BOTTOM_LEFT" mnemonicParsing="false" onAction="#btnLogoutOnAction" prefHeight="50.0" prefWidth="274.0" style="-fx-background-color: white;" text="               Logout" textFill="#636e72">
                      <font>
-                        <Font size="17.0" />
-                     </font>
-                  </Button>
-                  <Button fx:id="btnReports" alignment="BOTTOM_LEFT" mnemonicParsing="false" onAction="#btnReportsOnAction" prefHeight="45.0" prefWidth="277.0" style="-fx-background-color: white;" text="               Reports" textFill="#636e72">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </Button>
-                  <Button fx:id="btnLogout" alignment="BOTTOM_LEFT" mnemonicParsing="false" onAction="#btnLogoutOnAction" prefHeight="45.0" prefWidth="291.0" style="-fx-background-color: white;" text="               Logout" textFill="#636e72">
-                     <font>
-                        <Font size="17.0" />
+                        <Font size="20.0" />
                      </font>
                   </Button>
                </children>
             </VBox>
-            <FontAwesomeIcon fill="#636e72" iconName="DASHBOARD" layoutX="29.0" layoutY="159.0" size="2em" />
-            <FontAwesomeIcon fill="#636e72" iconName="CAR" layoutX="26.0" layoutY="204.0" size="2em" />
-            <FontAwesomeIcon fill="#636e72" iconName="SLIDESHARE" layoutX="28.0" layoutY="295.0" size="2em" />
-            <FontAwesomeIcon fill="#636e72" iconName="CART_PLUS" layoutX="28.0" layoutY="433.0" size="2em" />
-            <FontAwesomeIcon fill="#636e72" iconName="SIGN_OUT" layoutX="33.0" layoutY="701.0" size="2em" />
-            <FontAwesomeIcon fill="#636e72" iconName="CREDIT_CARD" layoutX="30.0" layoutY="518.0" size="2em" />
-            <FontAwesomeIcon fill="#636e72" iconName="CC" layoutX="28.0" layoutY="476.0" size="2em" />
-            <FontAwesomeIcon fill="#636e72" iconName="USERS" layoutX="29.0" layoutY="610.0" size="2em" />
-            <FontAwesomeIcon fill="#636e72" iconName="MONEY" layoutX="28.0" layoutY="340.0" size="2em" />
-            <FontAwesomeIcon fill="#636e72" iconName="FILE" layoutX="33.0" layoutY="651.0" size="2em" />
-            <FontAwesomeIcon fill="#636e72" layoutX="27.0" layoutY="248.0" size="2em" />
-            <FontAwesomeIcon fill="#636e72" layoutX="31.0" layoutY="561.0" size="2em" />
-            <FontAwesomeIcon fill="#636e72" layoutX="28.0" layoutY="384.0" size="2em" />
+            <FontAwesomeIcon fill="#636e72" iconName="DASHBOARD" layoutX="30.0" layoutY="160.0" size="2em" />
+            <FontAwesomeIcon fill="#636e72" iconName="CAR" layoutX="26.0" layoutY="214.0" size="2em" />
+            <FontAwesomeIcon fill="#636e72" iconName="SLIDESHARE" layoutX="28.0" layoutY="315.0" size="2em" />
+            <FontAwesomeIcon fill="#636e72" iconName="CART_PLUS" layoutX="29.0" layoutY="360.0" size="2em" />
+            <FontAwesomeIcon fill="#636e72" iconName="CREDIT_CARD" layoutX="31.0" layoutY="462.0" size="2em" />
+            <FontAwesomeIcon fill="#636e72" iconName="CC" layoutX="30.0" layoutY="410.0" size="2em" />
+            <FontAwesomeIcon fill="#636e72" iconName="USERS" layoutX="29.0" layoutY="558.0" size="2em" />
+            <FontAwesomeIcon fill="#636e72" iconName="FILE" layoutX="35.0" layoutY="614.0" size="2em" />
+            <FontAwesomeIcon fill="#636e72" layoutX="28.0" layoutY="263.0" size="2em" />
+            <FontAwesomeIcon fill="#636e72" layoutX="31.0" layoutY="507.0" size="2em" />
             <AnchorPane layoutX="-507.0" layoutY="-44.0" prefHeight="200.0" prefWidth="200.0" />
          </children>
       </AnchorPane>
@@ -109,5 +96,6 @@
             <Image url="@../asserts/CarLogo.jpg" />
          </image>
       </ImageView>
+      <FontAwesomeIcon fill="#636e72" iconName="SIGN_OUT" layoutX="35.0" layoutY="662.0" size="2em" />
    </children>
 </AnchorPane>
