Search Text Field Data Updated

--- a/src/main/resources/view/CashierSignUpForm.fxml
+++ b/src/main/resources/view/CashierSignUpForm.fxml
@@ -112,6 +112,6 @@
             <Font size="14.0" />
          </font>
       </TextField>
-      <FontAwesomeIcon fill="#c3bfbf" iconName="SEARCH" layoutX="266.0" layoutY="427.0" />
+      <FontAwesomeIcon fx:id="searchIcon" fill="#c3bfbf" iconName="SEARCH" layoutX="266.0" layoutY="427.0" />
    </children>
 </AnchorPane>
