--- a/src/main/resources/view/CustomerForm.fxml
+++ b/src/main/resources/view/CustomerForm.fxml
@@ -103,7 +103,7 @@
             <Font size="14.0" />
          </font>
       </TextField>
-      <FontAwesomeIcon fill="#c3bfbf" iconName="SEARCH" layoutX="256.0" layoutY="417.0" />
+      <FontAwesomeIcon fx:id="searchIcon" fill="#c3bfbf" iconName="SEARCH" layoutX="256.0" layoutY="417.0" />
       <TableView fx:id="tblCustomers" layoutX="28.0" layoutY="449.0" onMouseClicked="#tblCustomersOnClicked" prefHeight="331.0" prefWidth="978.0" stylesheets="@../asserts/TableStyle.css">
         <columns>
           <TableColumn fx:id="colNic" prefWidth="161.0" text="NIC" />
