--- a/src/main/resources/view/CreditsForm.fxml
+++ b/src/main/resources/view/CreditsForm.fxml
@@ -36,7 +36,7 @@
             <Font size="14.0" />
          </font>
       </TextField>
-      <FontAwesomeIcon fill="#c3bfbf" iconName="SEARCH" layoutX="285.0" layoutY="430.0" />
+      <FontAwesomeIcon fx:id="searchIcon" fill="#c3bfbf" iconName="SEARCH" layoutX="285.0" layoutY="430.0" />
       <AnchorPane layoutX="31.0" layoutY="128.0" prefHeight="261.0" prefWidth="978.0" style="-fx-background-color: white; -fx-background-radius: 10;">
          <children>
             <Label layoutX="14.0" layoutY="4.0" prefHeight="43.0" prefWidth="145.0" text="Credit ID">
