--- a/src/main/resources/reports/YearReport.jrxml
+++ b/src/main/resources/reports/YearReport.jrxml
@@ -14,7 +14,8 @@ FROM customer cu
          LEFT JOIN reservation r ON cu.nic = r.customer_nic
          LEFT JOIN reservation_detail rd ON r.reservation_id = rd.reservation_id
          LEFT JOIN payment p ON r.reservation_id = p.reservation_id
-         LEFT JOIN cashier cs ON r.cashier_username = cs.username;
+         LEFT JOIN cashier cs ON r.cashier_username = cs.username
+WHERE YEAR(pick_up_date) = YEAR(CURRENT_DATE());
 ]]></query>
 	<field name="customer_name" class="java.lang.String">
 		<property name="com.jaspersoft.studio.field.name" value="name"/>
