--- a/src/main/resources/view/CashierSignUpForm.fxml
+++ b/src/main/resources/view/CashierSignUpForm.fxml
@@ -29,7 +29,7 @@
             <TableColumn fx:id="colEmail" prefWidth="197.0" text="Email" />
          </columns>
       </TableView>
-      <AnchorPane layoutX="33.0" layoutY="129.0" prefHeight="255.0" prefWidth="978.0" style="-fx-background-color: white; -fx-background-radius: 20;">
+      <AnchorPane layoutX="30.0" layoutY="129.0" prefHeight="255.0" prefWidth="978.0" style="-fx-background-color: white; -fx-background-radius: 20;">
          <children>
             <Label layoutX="14.0" layoutY="4.0" prefHeight="43.0" prefWidth="115.0" text="User Name">
                <font>
@@ -81,7 +81,7 @@
                   <Font size="14.0" />
                </font>
             </TextField>
-            <Button fx:id="btnSave" layoutX="693.0" layoutY="17.0" mnemonicParsing="false" onAction="#btnSaveOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-color: #ffc029; -fx-border-radius: 10;" text="SAVE" textFill="#ffc029">
+            <Button fx:id="btnSave" layoutX="693.0" layoutY="17.0" mnemonicParsing="false" onAction="#btnSaveOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-color: #273c75; -fx-border-radius: 10;" text="SAVE" textFill="#273c75">
                <font>
                   <Font size="18.0" />
                </font>
@@ -101,7 +101,7 @@
                   <Font size="18.0" />
                </font>
             </Button>
-            <FontAwesomeIcon fill="#ffc029" iconName="SAVE" layoutX="714.0" layoutY="46.0" size="2em" />
+            <FontAwesomeIcon fill="#273c75" iconName="SAVE" layoutX="714.0" layoutY="46.0" size="2em" />
             <FontAwesomeIcon fill="#ffc029" iconName="REFRESH" layoutX="714.0" layoutY="104.0" size="2em" />
             <FontAwesomeIcon fill="#ffc029" iconName="TRASH" layoutX="715.0" layoutY="223.0" size="2em" />
             <FontAwesomeIcon fill="#ffc029" iconName="WRENCH" layoutX="713.0" layoutY="160.0" size="2em" />
