--- a/src/main/resources/view/CreditsForm.fxml
+++ b/src/main/resources/view/CreditsForm.fxml
@@ -13,7 +13,7 @@
 
 <AnchorPane fx:id="creditsContent" prefHeight="800.0" prefWidth="1026.0" style="-fx-background-color: #dfe4ea;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.rdfcarrentals.controller.CreditsFormController">
    <children>
-      <AnchorPane layoutX="33.0" prefHeight="102.0" prefWidth="998.0" style="-fx-background-color: white;">
+      <AnchorPane layoutX="25.0" prefHeight="102.0" prefWidth="1006.0" style="-fx-background-color: white;">
          <children>
             <Label alignment="CENTER" layoutX="375.0" layoutY="34.0" prefHeight="34.0" prefWidth="118.0" text="Credits" textFill="#ffc029">
                <font>
@@ -22,7 +22,7 @@
             </Label>
          </children>
       </AnchorPane>
-      <TableView fx:id="tblCredits" layoutX="33.0" layoutY="457.0" onMouseClicked="#tblCreditsOnClicked" prefHeight="324.0" prefWidth="978.0" stylesheets="@../asserts/TableStyle.css">
+      <TableView fx:id="tblCredits" layoutX="26.0" layoutY="454.0" onMouseClicked="#tblCreditsOnClicked" prefHeight="324.0" prefWidth="978.0" stylesheets="@../asserts/TableStyle.css">
          <columns>
             <TableColumn fx:id="colCreditID" prefWidth="160.0" text="Credit ID" />
             <TableColumn fx:id="colTotalAmount" prefWidth="207.0" text="Total Amount" />
@@ -37,7 +37,7 @@
          </font>
       </TextField>
       <FontAwesomeIcon fx:id="searchIcon" fill="#c3bfbf" iconName="SEARCH" layoutX="285.0" layoutY="430.0" />
-      <AnchorPane layoutX="31.0" layoutY="128.0" prefHeight="261.0" prefWidth="978.0" style="-fx-background-color: white; -fx-background-radius: 10;">
+      <AnchorPane layoutX="26.0" layoutY="128.0" prefHeight="261.0" prefWidth="978.0" style="-fx-background-color: white; -fx-background-radius: 10;">
          <children>
             <Label layoutX="14.0" layoutY="4.0" prefHeight="43.0" prefWidth="145.0" text="Credit ID">
                <font>
@@ -99,7 +99,7 @@
             </TextField>
          </children>
       </AnchorPane>
-      <Button fx:id="btnSave" layoutX="813.0" layoutY="337.0" mnemonicParsing="false" onAction="#btnSaveOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-color: #ffc029; -fx-border-radius: 10;" text="SAVE" textFill="#ffc029">
+      <Button fx:id="btnSave" layoutX="813.0" layoutY="337.0" mnemonicParsing="false" onAction="#btnSaveOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-color: #273c75; -fx-border-radius: 10;" text="SAVE" textFill="#273c75">
          <font>
             <Font size="18.0" />
          </font>
@@ -114,7 +114,7 @@
             <Font size="18.0" />
          </font>
       </Button>
-      <FontAwesomeIcon fill="#ffc029" iconName="SAVE" layoutX="834.0" layoutY="366.0" size="2em" />
+      <FontAwesomeIcon fill="#273c75" iconName="SAVE" layoutX="834.0" layoutY="366.0" size="2em" />
       <FontAwesomeIcon fill="#ffc029" iconName="REFRESH" layoutX="834.0" layoutY="304.0" size="2em" />
       <FontAwesomeIcon fill="#ffc029" iconName="WRENCH" layoutX="633.0" layoutY="300.0" size="2em" />
       <Button fx:id="btnDelete" layoutX="613.0" layoutY="335.0" mnemonicParsing="false" onAction="#btnDeleteOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-color: #ffc029; -fx-border-radius: 10;" text="   DELETE" textFill="#ffc029">
