--- a/src/main/resources/view/PaymentsForm.fxml
+++ b/src/main/resources/view/PaymentsForm.fxml
@@ -13,7 +13,7 @@
 
 <AnchorPane fx:id="paymentsContent" prefHeight="800.0" prefWidth="1026.0" style="-fx-background-color: #dfe4ea;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.rdfcarrentals.controller.PaymentsFormController">
    <children>
-      <AnchorPane layoutX="37.0" layoutY="1.0" prefHeight="102.0" prefWidth="998.0" style="-fx-background-color: white;">
+      <AnchorPane layoutX="27.0" layoutY="1.0" prefHeight="102.0" prefWidth="998.0" style="-fx-background-color: white;">
          <children>
             <Label alignment="CENTER" layoutX="300.0" layoutY="24.0" prefHeight="54.0" prefWidth="176.0" text="Payments" textFill="#ffc029">
                <font>
@@ -22,7 +22,7 @@
             </Label>
          </children>
       </AnchorPane>
-      <TableView fx:id="tblPayments" layoutX="37.0" layoutY="458.0" onMouseClicked="#tblPaymentsOnClicked" prefHeight="324.0" prefWidth="978.0" stylesheets="@../asserts/TableStyle.css">
+      <TableView fx:id="tblPayments" layoutX="25.0" layoutY="458.0" onMouseClicked="#tblPaymentsOnClicked" prefHeight="324.0" prefWidth="978.0" stylesheets="@../asserts/TableStyle.css">
          <columns>
             <TableColumn fx:id="colPaymentID" prefWidth="100.0" text="Payment ID" />
             <TableColumn fx:id="colReservationID" prefWidth="120.0" text="Reservation ID" />
@@ -33,7 +33,7 @@
             <TableColumn fx:id="colOption" prefWidth="141.0" text="Option" />
          </columns>
       </TableView>
-      <AnchorPane layoutX="37.0" layoutY="129.0" prefHeight="261.0" prefWidth="978.0" style="-fx-background-color: white; -fx-background-radius: 20;">
+      <AnchorPane layoutX="25.0" layoutY="129.0" prefHeight="261.0" prefWidth="978.0" style="-fx-background-color: white; -fx-background-radius: 20;">
          <children>
             <Label layoutX="14.0" layoutY="4.0" prefHeight="43.0" prefWidth="145.0" text="Payment ID">
                <font>
@@ -55,7 +55,7 @@
                   <Font size="14.0" />
                </font>
             </TextField>
-            <Button fx:id="btnAddPayment" layoutX="697.0" layoutY="207.0" mnemonicParsing="false" onAction="#btnAddPaymentOnAction" prefHeight="40.0" prefWidth="228.0" style="-fx-background-color: #dff9fb; -fx-border-color: #ffc029; -fx-border-radius: 10;" text="   ADD PAYMENT" textFill="#ffc029">
+            <Button fx:id="btnAddPayment" layoutX="697.0" layoutY="207.0" mnemonicParsing="false" onAction="#btnAddPaymentOnAction" prefHeight="40.0" prefWidth="228.0" style="-fx-background-color: #dff9fb; -fx-border-color: #273c75; -fx-border-radius: 10;" text="   ADD PAYMENT" textFill="#273c75">
                <font>
                   <Font size="18.0" />
                </font>
@@ -65,7 +65,7 @@
                   <Font size="18.0" />
                </font>
             </Button>
-            <FontAwesomeIcon fill="#ffc029" iconName="SAVE" layoutX="716.0" layoutY="236.0" size="2em" />
+            <FontAwesomeIcon fill="#273c75" iconName="SAVE" layoutX="716.0" layoutY="236.0" size="2em" />
             <FontAwesomeIcon fill="#ffc029" iconName="REFRESH" layoutX="503.0" layoutY="236.0" size="2em" />
             <Label layoutX="14.0" layoutY="152.0" prefHeight="43.0" prefWidth="145.0" text="Date">
                <font>
