--- a/src/main/resources/view/RepairsForm.fxml
+++ b/src/main/resources/view/RepairsForm.fxml
@@ -22,7 +22,7 @@
             </Label>
          </children>
       </AnchorPane>
-      <TableView fx:id="tblRepairs" layoutX="32.0" layoutY="447.0" onMouseClicked="#tblRepairsOnClicked" prefHeight="332.0" prefWidth="976.0" stylesheets="@../asserts/TableStyle.css">
+      <TableView fx:id="tblRepairs" layoutX="29.0" layoutY="447.0" onMouseClicked="#tblRepairsOnClicked" prefHeight="332.0" prefWidth="976.0" stylesheets="@../asserts/TableStyle.css">
         <columns>
           <TableColumn fx:id="colRepairID" prefWidth="117.0" text="Repair ID" />
           <TableColumn fx:id="colLicensePlateNo" prefWidth="140.0" text="License Plate No" />
@@ -32,7 +32,7 @@
             <TableColumn fx:id="colOption" prefWidth="110.0" text="Option" />
         </columns>
       </TableView>
-      <AnchorPane layoutX="30.0" layoutY="119.0" prefHeight="261.0" prefWidth="978.0" style="-fx-background-color: white; -fx-background-radius: 20;">
+      <AnchorPane layoutX="27.0" layoutY="119.0" prefHeight="261.0" prefWidth="978.0" style="-fx-background-color: white; -fx-background-radius: 20;">
          <children>
             <Label layoutX="14.0" layoutY="4.0" prefHeight="43.0" prefWidth="145.0" text="Repair ID">
                <font>
@@ -49,7 +49,7 @@
                   <Font size="14.0" />
                </font>
             </TextField>
-            <Button fx:id="btnAddRepair" layoutX="727.0" layoutY="207.0" mnemonicParsing="false" onAction="#btnAddRepairOnAction" prefHeight="40.0" prefWidth="228.0" style="-fx-background-color: #dff9fb; -fx-border-color: #ffc029; -fx-border-radius: 10;" text="   ADD REPAIR" textFill="#ffc029">
+            <Button fx:id="btnAddRepair" layoutX="727.0" layoutY="207.0" mnemonicParsing="false" onAction="#btnAddRepairOnAction" prefHeight="40.0" prefWidth="228.0" style="-fx-background-color: #dff9fb; -fx-border-color: #273c75; -fx-border-radius: 10;" text="   ADD REPAIR" textFill="#273c75">
                <font>
                   <Font size="18.0" />
                </font>
@@ -59,7 +59,7 @@
                   <Font size="18.0" />
                </font>
             </Button>
-            <FontAwesomeIcon fill="#ffc029" iconName="SAVE" layoutX="746.0" layoutY="236.0" size="2em" />
+            <FontAwesomeIcon fill="#273c75" iconName="SAVE" layoutX="746.0" layoutY="236.0" size="2em" />
             <FontAwesomeIcon fill="#ffc029" iconName="REFRESH" layoutX="523.0" layoutY="236.0" size="2em" />
             <Label layoutX="14.0" layoutY="152.0" prefHeight="43.0" prefWidth="145.0" text="Date">
                <font>
