--- a/src/main/resources/view/ReservationsForm.fxml
+++ b/src/main/resources/view/ReservationsForm.fxml
@@ -22,21 +22,21 @@
             </Label>
          </children>
       </AnchorPane>
-      <TableView fx:id="tblReservations" layoutX="32.0" layoutY="458.0" onMouseClicked="#tblReservationsOnClicked" prefHeight="324.0" prefWidth="978.0" stylesheets="@../asserts/TableStyle.css">
+      <TableView fx:id="tblReservations" layoutX="29.0" layoutY="458.0" onMouseClicked="#tblReservationsOnClicked" prefHeight="324.0" prefWidth="978.0" stylesheets="@../asserts/TableStyle.css">
          <columns>
             <TableColumn fx:id="colReservationID" prefWidth="97.0" text="Reservation&#10;        ID" />
             <TableColumn fx:id="colCreditID" prefWidth="56.0" text="Credit &#10;    ID" />
             <TableColumn fx:id="colCustomerNIC" prefWidth="130.0" text="Customer NIC" />
             <TableColumn fx:id="colCashierUserName" minWidth="1.0" prefWidth="129.0" text="  Cashier &#10;UserName" />
-            <TableColumn fx:id="colPickUpDate" prefWidth="97.0" text="Pick Up &#10;  Date" />
+            <TableColumn fx:id="colPickUpDate" prefWidth="104.0" text="Pick Up &#10;  Date" />
             <TableColumn fx:id="colPickUpTime" prefWidth="94.0" text="Pick Up &#10; Time" />
-            <TableColumn fx:id="colReturnDate" prefWidth="95.0" text="Return &#10;  Date" />
-            <TableColumn fx:id="colReturnTime" prefWidth="93.0" text="Return &#10;  Time" />
-            <TableColumn fx:id="colIsDriverWant" prefWidth="77.0" text="Is Driver&#10; Want" />
-            <TableColumn fx:id="colOption" prefWidth="109.0" text="Option" />
+            <TableColumn fx:id="colReturnDate" prefWidth="105.0" text="Return &#10;  Date" />
+            <TableColumn fx:id="colReturnTime" prefWidth="95.0" text="Return &#10;  Time" />
+            <TableColumn fx:id="colIsDriverWant" prefWidth="88.0" text="Is Driver&#10; Want" />
+            <TableColumn fx:id="colOption" prefWidth="79.0" text="Option" />
          </columns>
       </TableView>
-      <AnchorPane fx:id="reservationFormPane" layoutX="32.0" layoutY="129.0" prefHeight="261.0" prefWidth="978.0" style="-fx-background-color: white; -fx-background-radius: 10;">
+      <AnchorPane fx:id="reservationFormPane" layoutX="29.0" layoutY="129.0" prefHeight="261.0" prefWidth="978.0" style="-fx-background-color: white; -fx-background-radius: 10;">
          <children>
             <Label layoutX="14.0" layoutY="4.0" prefHeight="43.0" prefWidth="145.0" text="Reservation ID">
                <font>
@@ -53,7 +53,7 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <Button fx:id="btnAddReservation" layoutX="737.0" layoutY="207.0" mnemonicParsing="false" onAction="#btnAddReservationOnAction" prefHeight="40.0" prefWidth="228.0" style="-fx-background-color: #dff9fb; -fx-border-color: #ffc029; -fx-border-radius: 10;" text="     ADD RESERVATION" textFill="#ffc029">
+            <Button fx:id="btnAddReservation" layoutX="737.0" layoutY="207.0" mnemonicParsing="false" onAction="#btnAddReservationOnAction" prefHeight="40.0" prefWidth="228.0" style="-fx-background-color: #dff9fb; -fx-border-color: #273c75; -fx-border-radius: 10;" text="     ADD RESERVATION" textFill="#273c75">
                <font>
                   <Font size="18.0" />
                </font>
@@ -63,7 +63,7 @@
                   <Font size="18.0" />
                </font>
             </Button>
-            <FontAwesomeIcon fill="#ffc029" iconName="CART_PLUS" layoutX="752.0" layoutY="236.0" size="2em" />
+            <FontAwesomeIcon fill="#273c75" iconName="CART_PLUS" layoutX="752.0" layoutY="236.0" size="2em" />
             <Label layoutX="14.0" layoutY="148.0" prefHeight="43.0" prefWidth="145.0" text="Return Date">
                <font>
                   <Font size="14.0" />
@@ -122,7 +122,7 @@
             <TextField fx:id="txtTotalAmount" layoutX="823.0" layoutY="110.0" prefHeight="35.0" prefWidth="125.0" />
          </children>
       </AnchorPane>
-      <TextField fx:id="txtFldSearchHere" layoutX="262.0" layoutY="407.0" onKeyReleased="#txtFldSearchHereOnAction" prefHeight="35.0" prefWidth="500.0" promptText="       Search Here">
+      <TextField fx:id="txtFldSearchHere" layoutX="260.0" layoutY="407.0" onKeyReleased="#txtFldSearchHereOnAction" prefHeight="35.0" prefWidth="500.0" promptText="       Search Here">
          <font>
             <Font size="14.0" />
          </font>
