--- a/src/main/resources/view/WelcomeForm.fxml
+++ b/src/main/resources/view/WelcomeForm.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
+
 <AnchorPane fx:id="welcomePane" prefHeight="800.0" prefWidth="1300.0" style="-fx-background-color: 457b9d;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.rdfcarrentals.controller.WelcomeFormController">
    <children>
       <ImageView fitHeight="800.0" fitWidth="885.0" layoutX="-1.0">
@@ -41,12 +42,12 @@
                   </Label>
                   <Button fx:id="btnAdmin" layoutX="110.0" layoutY="135.0" mnemonicParsing="false" onAction="#navigateToAdminLoginForm" prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: #ffc42a; -fx-background-radius: 10;" text="Admin" textFill="WHITE">
                      <font>
-                        <Font size="20.0" />
+                        <Font name="System Bold" size="20.0" />
                      </font>
                   </Button>
                   <Button fx:id="btnCashier" alignment="CENTER" layoutX="111.0" layoutY="219.0" mnemonicParsing="false" onAction="#navigateToCashierLoginForm" prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: #ffc42a; -fx-background-radius: 10;" text="Cashier" textFill="WHITE">
                      <font>
-                        <Font size="20.0" />
+                        <Font name="System Bold" size="20.0" />
                      </font>
                   </Button>
                </children>
