--- a/src/main/resources/view/AdminDashboardForm.fxml
+++ b/src/main/resources/view/AdminDashboardForm.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
 <?import javafx.scene.chart.BarChart?>
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.NumberAxis?>
@@ -140,5 +141,11 @@
             </Label>
          </children>
       </AnchorPane>
+      <FontAwesomeIcon fill="#636e72" iconName="USER" layoutX="754.0" layoutY="32.0" size="2em" />
+      <Label fx:id="lblHeadingUserName" layoutX="778.0" layoutY="5.0" prefHeight="35.0" prefWidth="241.0" textFill="#636e72">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
