--- a/src/main/resources/view/CarsForm.fxml
+++ b/src/main/resources/view/CarsForm.fxml
@@ -63,30 +63,18 @@
                   <Font size="14.0" />
                </font>
             </TextField>
-            <Button fx:id="btnSave" layoutX="773.0" layoutY="17.0" mnemonicParsing="false" onAction="#btnSaveOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-color: #273c75; -fx-border-radius: 10;" text="SAVE" textFill="#273c75">
+            <Button fx:id="btnSave" layoutX="782.0" layoutY="198.0" mnemonicParsing="false" onAction="#btnSaveOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-color: #273c75; -fx-border-radius: 10;" text="SAVE" textFill="#273c75">
                <font>
                   <Font size="18.0" />
                </font>
             </Button>
-            <Button fx:id="btnRefresh" layoutX="773.0" layoutY="75.0" mnemonicParsing="false" onAction="#btnRefreshOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-radius: 10; -fx-border-color: #ffc029;" text="      REFRESH" textFill="#ffc029">
+            <Button fx:id="btnRefresh" layoutX="778.0" layoutY="137.0" mnemonicParsing="false" onAction="#btnRefreshOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-radius: 10; -fx-border-color: #ffc029;" text="      REFRESH" textFill="#ffc029">
                <font>
                   <Font size="18.0" />
                </font>
             </Button>
-            <Button fx:id="btnUpdate" layoutX="773.0" layoutY="134.0" mnemonicParsing="false" onAction="#btnUpdateOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-color: #ffc029; -fx-border-radius: 10;" text="    UPDATE" textFill="#ffc029">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Button>
-            <Button fx:id="btnDelete" layoutX="773.0" layoutY="195.0" mnemonicParsing="false" onAction="#btnDeleteOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-color: #ffc029; -fx-border-radius: 10;" text="   DELETE" textFill="#ffc029">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Button>
-            <FontAwesomeIcon fill="#273c75" iconName="SAVE" layoutX="794.0" layoutY="46.0" size="2em" />
-            <FontAwesomeIcon fill="#ffc029" iconName="REFRESH" layoutX="794.0" layoutY="104.0" size="2em" />
-            <FontAwesomeIcon fill="#ffc029" iconName="TRASH" layoutX="795.0" layoutY="223.0" size="2em" />
-            <FontAwesomeIcon fill="#ffc029" iconName="WRENCH" layoutX="793.0" layoutY="160.0" size="2em" />
+            <FontAwesomeIcon fill="#273c75" iconName="SAVE" layoutX="803.0" layoutY="227.0" size="2em" />
+            <FontAwesomeIcon fill="#ffc029" iconName="REFRESH" layoutX="799.0" layoutY="166.0" size="2em" />
             <Label layoutX="14.0" layoutY="145.0" prefHeight="43.0" prefWidth="131.0" text="Daily Rate">
                <font>
                   <Font size="14.0" />
@@ -129,14 +117,21 @@
       <FontAwesomeIcon fx:id="searchIcon" fill="#c3bfbf" iconName="SEARCH" layoutX="256.0" layoutY="417.0" />
       <TableView fx:id="tblCars" layoutX="28.0" layoutY="449.0" onMouseClicked="#tblCarsOnClicked" prefHeight="331.0" prefWidth="978.0" stylesheets="@../asserts/TableStyle.css">
          <columns>
-            <TableColumn fx:id="colLicensePlateNo" prefWidth="131.0" text="License Plate No" />
-            <TableColumn fx:id="colTypeID" prefWidth="119.0" text="Type ID" />
-            <TableColumn fx:id="colModel" prefWidth="171.0" text="Model" />
-            <TableColumn fx:id="colColour" minWidth="1.0" prefWidth="119.0" text="Colour" />
-            <TableColumn fx:id="colDailyRate" prefWidth="147.0" text="Daily Rate" />
-            <TableColumn fx:id="colMonthlyRate" prefWidth="149.0" text="Monthly Rate" />
-            <TableColumn fx:id="colAvailabilityStatus" prefWidth="141.0" text="Availability Status" />
+            <TableColumn fx:id="colLicensePlateNo" prefWidth="117.0" text=" License &#10;Plate No" />
+            <TableColumn fx:id="colTypeID" prefWidth="104.0" text="Type ID" />
+            <TableColumn fx:id="colModel" prefWidth="139.0" text="Model" />
+            <TableColumn fx:id="colColour" minWidth="1.0" prefWidth="140.0" text="Colour" />
+            <TableColumn fx:id="colDailyRate" prefWidth="140.0" text="Daily Rate" />
+            <TableColumn fx:id="colMonthlyRate" prefWidth="134.0" text="Monthly Rate" />
+            <TableColumn fx:id="colAvailabilityStatus" prefWidth="114.0" text="Availability &#10;    Status" />
+            <TableColumn fx:id="colOption" prefWidth="88.0" text="Options" />
          </columns>
       </TableView>
+      <FontAwesomeIcon fill="#636e72" iconName="USER" layoutX="752.0" layoutY="31.0" size="2em" />
+      <Label fx:id="lblHeadingUserName" layoutX="776.0" layoutY="4.0" prefHeight="35.0" prefWidth="241.0" textFill="#636e72">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
