--- a/src/main/resources/view/CashierDashboardForm.fxml
+++ b/src/main/resources/view/CashierDashboardForm.fxml
@@ -11,7 +11,7 @@
    <children>
       <AnchorPane fx:id="cashierDashboardHeadingPane" layoutX="27.0" prefHeight="102.0" prefWidth="998.0" style="-fx-background-color: white;">
          <children>
-            <Label alignment="CENTER" layoutX="244.0" layoutY="33.0" prefHeight="37.0" prefWidth="129.0" text="Dashboard" textFill="#ffc029">
+            <Label alignment="CENTER" layoutX="372.0" layoutY="33.0" prefHeight="37.0" prefWidth="129.0" text="Dashboard" textFill="#ffc029">
                <font>
                   <Font size="17.0" />
                </font>
@@ -81,5 +81,11 @@
             </Label>
          </children>
       </AnchorPane>
+      <FontAwesomeIcon fill="#636e72" iconName="USER" layoutX="754.0" layoutY="32.0" size="2em" />
+      <Label fx:id="lblHeadingUserName" layoutX="778.0" layoutY="5.0" prefHeight="35.0" prefWidth="241.0" textFill="#636e72">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
