--- a/src/main/resources/view/CashierSignUpForm.fxml
+++ b/src/main/resources/view/CashierSignUpForm.fxml
@@ -22,11 +22,12 @@
       </AnchorPane>
       <TableView fx:id="tblCashiers" layoutX="29.0" layoutY="457.0" onMouseClicked="#tblCashiersOnClicked" prefHeight="324.0" prefWidth="978.0" stylesheets="@../asserts/TableStyle.css">
          <columns>
-            <TableColumn fx:id="colUserName" prefWidth="160.0" text="User Name" />
-            <TableColumn fx:id="colPassword" prefWidth="173.0" text="Password" />
-            <TableColumn fx:id="colName" prefWidth="245.0" text="Name" />
-            <TableColumn fx:id="colContactNumber" minWidth="1.0" prefWidth="202.0" text="Contact Number" />
-            <TableColumn fx:id="colEmail" prefWidth="197.0" text="Email" />
+            <TableColumn fx:id="colUserName" prefWidth="147.0" text="User Name" />
+            <TableColumn fx:id="colPassword" prefWidth="157.0" text="Password" />
+            <TableColumn fx:id="colName" prefWidth="214.0" text="Name" />
+            <TableColumn fx:id="colContactNumber" minWidth="1.0" prefWidth="162.0" text="Contact Number" />
+            <TableColumn fx:id="colEmail" prefWidth="179.0" text="Email" />
+            <TableColumn fx:id="colOption" prefWidth="117.0" text="Options" />
          </columns>
       </TableView>
       <AnchorPane layoutX="30.0" layoutY="129.0" prefHeight="255.0" prefWidth="978.0" style="-fx-background-color: white; -fx-background-radius: 20;">
@@ -81,30 +82,18 @@
                   <Font size="14.0" />
                </font>
             </TextField>
-            <Button fx:id="btnSave" layoutX="693.0" layoutY="17.0" mnemonicParsing="false" onAction="#btnSaveOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-color: #273c75; -fx-border-radius: 10;" text="SAVE" textFill="#273c75">
+            <Button fx:id="btnSave" layoutX="786.0" layoutY="200.0" mnemonicParsing="false" onAction="#btnSaveOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-color: #273c75; -fx-border-radius: 10;" text="SAVE" textFill="#273c75">
                <font>
                   <Font size="18.0" />
                </font>
             </Button>
-            <Button fx:id="btnRefresh" layoutX="693.0" layoutY="75.0" mnemonicParsing="false" onAction="#btnRefreshOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-radius: 10; -fx-border-color: #ffc029;" text="      REFRESH" textFill="#ffc029">
+            <Button fx:id="btnRefresh" layoutX="594.0" layoutY="201.0" mnemonicParsing="false" onAction="#btnRefreshOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-radius: 10; -fx-border-color: #ffc029;" text="      REFRESH" textFill="#ffc029">
                <font>
                   <Font size="18.0" />
                </font>
             </Button>
-            <Button fx:id="btnUpdate" layoutX="693.0" layoutY="134.0" mnemonicParsing="false" onAction="#btnUpdateOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-color: #ffc029; -fx-border-radius: 10;" text="    UPDATE" textFill="#ffc029">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Button>
-            <Button fx:id="btnDelete" layoutX="693.0" layoutY="195.0" mnemonicParsing="false" onAction="#btnDeleteOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-color: #ffc029; -fx-border-radius: 10;" text="   DELETE" textFill="#ffc029">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Button>
-            <FontAwesomeIcon fill="#273c75" iconName="SAVE" layoutX="714.0" layoutY="46.0" size="2em" />
-            <FontAwesomeIcon fill="#ffc029" iconName="REFRESH" layoutX="714.0" layoutY="104.0" size="2em" />
-            <FontAwesomeIcon fill="#ffc029" iconName="TRASH" layoutX="715.0" layoutY="223.0" size="2em" />
-            <FontAwesomeIcon fill="#ffc029" iconName="WRENCH" layoutX="713.0" layoutY="160.0" size="2em" />
+            <FontAwesomeIcon fill="#273c75" iconName="SAVE" layoutX="807.0" layoutY="229.0" size="2em" />
+            <FontAwesomeIcon fill="#ffc029" iconName="REFRESH" layoutX="615.0" layoutY="230.0" size="2em" />
          </children>
       </AnchorPane>
       <TextField fx:id="txtFldSearchHere" layoutX="252.0" layoutY="405.0" onKeyReleased="#txtFldSearchHereOnAction" prefHeight="35.0" prefWidth="500.0" promptText="       Search Here">
@@ -113,5 +102,11 @@
          </font>
       </TextField>
       <FontAwesomeIcon fx:id="searchIcon" fill="#c3bfbf" iconName="SEARCH" layoutX="266.0" layoutY="427.0" />
+      <FontAwesomeIcon fill="#636e72" iconName="USER" layoutX="756.0" layoutY="31.0" size="2em" />
+      <Label fx:id="lblHeadingUserName" layoutX="780.0" layoutY="4.0" prefHeight="35.0" prefWidth="241.0" textFill="#636e72">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
