--- a/src/main/resources/view/CustomerForm.fxml
+++ b/src/main/resources/view/CustomerForm.fxml
@@ -6,6 +6,8 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -18,33 +20,39 @@
                   <Font size="18.0" />
                </font>
             </Label>
+            <FontAwesomeIcon fill="#636e72" iconName="USER" layoutX="726.0" layoutY="31.0" size="2em" />
+            <Label fx:id="lblHeadingUserName" layoutX="750.0" layoutY="4.0" prefHeight="35.0" prefWidth="241.0" textFill="#636e72">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
       <AnchorPane layoutX="28.0" layoutY="119.0" prefHeight="255.0" prefWidth="978.0" style="-fx-background-color: white; -fx-background-radius: 20;">
          <children>
             <Label layoutX="14.0" layoutY="4.0" prefHeight="43.0" prefWidth="115.0" text="Customer NIC">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
-            <Label layoutX="14.0" layoutY="50.0" prefHeight="43.0" prefWidth="115.0" text="Customer Name">
+            <Label layoutX="14.0" layoutY="50.0" prefHeight="43.0" prefWidth="126.0" text="Customer Name">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
             <Label layoutX="14.0" layoutY="100.0" prefHeight="43.0" prefWidth="115.0" text="Address">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
             <Label layoutX="14.0" layoutY="150.0" prefHeight="43.0" prefWidth="115.0" text="Email">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
-            <Label layoutX="14.0" layoutY="196.0" prefHeight="43.0" prefWidth="115.0" text="Contact Number">
+            <Label layoutX="14.0" layoutY="196.0" prefHeight="43.0" prefWidth="126.0" text="Contact Number">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
             <TextField fx:id="txtFldName" layoutX="149.0" layoutY="56.0" prefHeight="35.0" prefWidth="398.0">
@@ -72,30 +80,23 @@
                   <Font size="14.0" />
                </font>
             </TextField>
-            <Button fx:id="btnSave" layoutX="693.0" layoutY="17.0" mnemonicParsing="false" onAction="#btnSaveOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-color: #273c75; -fx-border-radius: 10;" text="SAVE" textFill="#273c75">
+            <Button fx:id="btnSave" layoutX="792.0" layoutY="196.0" mnemonicParsing="false" onAction="#btnSaveOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-color: #273c75; -fx-border-radius: 10;" text="SAVE" textFill="#273c75">
                <font>
                   <Font size="18.0" />
                </font>
             </Button>
-            <Button fx:id="btnRefresh" layoutX="693.0" layoutY="75.0" mnemonicParsing="false" onAction="#btnRefreshOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-radius: 10; -fx-border-color: #ffc029;" text="      REFRESH" textFill="#ffc029">
+            <Button fx:id="btnRefresh" layoutX="601.0" layoutY="196.0" mnemonicParsing="false" onAction="#btnRefreshOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-radius: 10; -fx-border-color: #ffc029;" text="      REFRESH" textFill="#ffc029">
                <font>
                   <Font size="18.0" />
                </font>
             </Button>
-            <Button fx:id="btnUpdate" layoutX="693.0" layoutY="134.0" mnemonicParsing="false" onAction="#btnUpdateOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-color: #ffc029; -fx-border-radius: 10;" text="    UPDATE" textFill="#ffc029">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Button>
-            <Button fx:id="btnDelete" layoutX="693.0" layoutY="195.0" mnemonicParsing="false" onAction="#btnDeleteOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-color: #ffc029; -fx-border-radius: 10;" text="   DELETE" textFill="#ffc029">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Button>
-            <FontAwesomeIcon fill="#273c75" iconName="SAVE" layoutX="714.0" layoutY="46.0" size="2em" />
-            <FontAwesomeIcon fill="#ffc029" iconName="REFRESH" layoutX="714.0" layoutY="104.0" size="2em" />
-            <FontAwesomeIcon fill="#ffc029" iconName="TRASH" layoutX="715.0" layoutY="223.0" size="2em" />
-            <FontAwesomeIcon fill="#ffc029" iconName="WRENCH" layoutX="713.0" layoutY="160.0" size="2em" />
+            <FontAwesomeIcon fill="#273c75" iconName="SAVE" layoutX="813.0" layoutY="225.0" size="2em" />
+            <FontAwesomeIcon fill="#ffc029" iconName="REFRESH" layoutX="622.0" layoutY="225.0" size="2em" />
+            <ImageView fitHeight="179.0" fitWidth="224.0" layoutX="675.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../asserts/CustomerForm.jpg" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
       <TextField fx:id="txtFldSearchHere" layoutX="242.0" layoutY="395.0" onKeyReleased="#txtFldSearchHereOnAction" prefHeight="35.0" prefWidth="500.0" promptText="       Search Here">
@@ -107,10 +108,11 @@
       <TableView fx:id="tblCustomers" layoutX="28.0" layoutY="449.0" onMouseClicked="#tblCustomersOnClicked" prefHeight="331.0" prefWidth="978.0" stylesheets="@../asserts/TableStyle.css">
         <columns>
           <TableColumn fx:id="colNic" prefWidth="161.0" text="NIC" />
-          <TableColumn fx:id="colName" prefWidth="221.0" text="Name" />
-            <TableColumn fx:id="colAddress" prefWidth="185.0" text="Address" />
-            <TableColumn fx:id="colEmail" minWidth="1.0" prefWidth="234.0" text="Email" />
-            <TableColumn fx:id="colContactNumber" prefWidth="176.0" text="Contact Number" />
+          <TableColumn fx:id="colName" prefWidth="203.0" text="Name" />
+            <TableColumn fx:id="colAddress" prefWidth="148.0" text="Address" />
+            <TableColumn fx:id="colEmail" minWidth="1.0" prefWidth="184.0" text="Email" />
+            <TableColumn fx:id="colContactNumber" prefWidth="183.0" text="Contact Number" />
+            <TableColumn fx:id="colOptions" prefWidth="96.0" text="Options" />
         </columns>
       </TableView>
    </children>
