--- a/src/main/resources/view/DriverForm.fxml
+++ b/src/main/resources/view/DriverForm.fxml
@@ -29,29 +29,29 @@
             <TableColumn fx:id="colAvailabilityStatus" minWidth="1.0" prefWidth="106.0" text="Availability &#10;    Status" />
             <TableColumn fx:id="colContactNumber" prefWidth="174.0" text="Contact &#10;Number" />
             <TableColumn fx:id="colPricePerKm" prefWidth="86.0" text="Price Per &#10;    km" />
-            <TableColumn fx:id="colOption" prefWidth="122.0" text="Option" />
+            <TableColumn fx:id="colOption" prefWidth="122.0" text="Options" />
          </columns>
       </TableView>
       <AnchorPane fx:id="driverFormPane" layoutX="30.0" layoutY="129.0" prefHeight="255.0" prefWidth="978.0" style="-fx-background-color: white; -fx-background-radius: 10;">
          <children>
             <Label layoutX="14.0" layoutY="4.0" prefHeight="43.0" prefWidth="145.0" text="Driver NIC">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
             <Label layoutX="14.0" layoutY="50.0" prefHeight="43.0" prefWidth="145.0" text="Driver Name">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
             <Label layoutX="14.0" layoutY="100.0" prefHeight="43.0" prefWidth="145.0" text="Email">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
             <Label layoutX="14.0" layoutY="196.0" prefHeight="43.0" prefWidth="145.0" text="Contact Number">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
             <TextField fx:id="txtFldName" layoutX="179.0" layoutY="56.0" prefHeight="35.0" prefWidth="398.0">
@@ -74,25 +74,19 @@
                   <Font size="14.0" />
                </font>
             </TextField>
-            <Button fx:id="btnSave" layoutX="753.0" layoutY="197.0" mnemonicParsing="false" onAction="#btnSaveOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-color: #273c75; -fx-border-radius: 10;" text="   SAVE" textFill="#273c75">
+            <Button fx:id="btnSave" layoutX="786.0" layoutY="197.0" mnemonicParsing="false" onAction="#btnSaveOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-color: #273c75; -fx-border-radius: 10;" text="   SAVE" textFill="#273c75">
                <font>
                   <Font size="18.0" />
                </font>
             </Button>
-            <Button fx:id="btnUpdate" layoutX="753.0" layoutY="140.0" mnemonicParsing="false" onAction="#btnUpdateOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-color: #ffc029; -fx-border-radius: 10;" text="    UPDATE" textFill="#ffc029">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Button>
-            <FontAwesomeIcon fill="#273c75" iconName="SAVE" layoutX="784.0" layoutY="226.0" size="2em" />
-            <FontAwesomeIcon fill="#ffc029" iconName="WRENCH" layoutX="779.0" layoutY="167.0" size="2em" />
+            <FontAwesomeIcon fill="#273c75" iconName="SAVE" layoutX="811.0" layoutY="226.0" size="2em" />
             <Label layoutX="14.0" layoutY="149.0" prefHeight="43.0" prefWidth="145.0" text="Availability Status">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
             <ComboBox fx:id="cmbAvailabilityStatus" layoutX="179.0" layoutY="151.0" prefHeight="35.0" prefWidth="203.0" promptText="Select" style="-fx-background-color: white; -fx-border-color: #dcdde1;" />
-            <Button fx:id="btnRefresh" layoutX="753.0" layoutY="80.0" mnemonicParsing="false" onAction="#btnRefreshOnAction" prefHeight="35.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-radius: 10; -fx-border-color: #ffc029;" text="  REFRESH" textFill="#ffc029">
+            <Button fx:id="btnRefresh" layoutX="785.0" layoutY="137.0" mnemonicParsing="false" onAction="#btnRefreshOnAction" prefHeight="35.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-radius: 10; -fx-border-color: #ffc029;" text="  REFRESH" textFill="#ffc029">
                <font>
                   <Font size="18.0" />
                </font>
@@ -110,7 +104,7 @@
             </Button>
             <Label layoutX="456.0" layoutY="195.0" prefHeight="43.0" prefWidth="95.0" text="Price Per km">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
             <TextField fx:id="txtPricePerKm" layoutX="564.0" layoutY="201.0" prefHeight="35.0" prefWidth="145.0">
@@ -129,7 +123,13 @@
       <FontAwesomeIcon fx:id="searchIcon" fill="#c3bfbf" iconName="SEARCH" layoutX="266.0" layoutY="428.0" />
       <Label layoutX="472.0" layoutY="274.0" prefHeight="43.0" prefWidth="145.0" text="License Plate No">
          <font>
-            <Font size="14.0" />
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <FontAwesomeIcon fill="#636e72" iconName="USER" layoutX="756.0" layoutY="31.0" size="2em" />
+      <Label fx:id="lblHeadingUserName" layoutX="780.0" layoutY="4.0" prefHeight="35.0" prefWidth="241.0" textFill="#636e72">
+         <font>
+            <Font size="15.0" />
          </font>
       </Label>
    </children>
