--- a/src/main/resources/view/ReportsForm.fxml
+++ b/src/main/resources/view/ReportsForm.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -84,5 +85,11 @@
             </Label>
          </children>
       </AnchorPane>
+      <FontAwesomeIcon fill="#636e72" iconName="USER" layoutX="753.0" layoutY="31.0" size="2em" />
+      <Label fx:id="lblHeadingUserName" layoutX="777.0" layoutY="4.0" prefHeight="35.0" prefWidth="241.0" textFill="#636e72">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
